QA: Prevent the minifying glass from wrapping

--- a/include/themes/cacti/main.css
+++ b/include/themes/cacti/main.css
@@ -1260,6 +1260,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
