--- a/include/themes/carrot/main.css
+++ b/include/themes/carrot/main.css
@@ -1265,6 +1265,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
