--- a/include/themes/dark/main.css
+++ b/include/themes/dark/main.css
@@ -1452,6 +1452,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
