--- a/include/themes/hollyberry/main.css
+++ b/include/themes/hollyberry/main.css
@@ -1302,6 +1302,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
