--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -1480,6 +1480,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
