--- a/include/themes/paper-plane/main.css
+++ b/include/themes/paper-plane/main.css
@@ -1461,6 +1461,7 @@ tr>td.textInfo.right {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
