--- a/include/themes/paw/main.css
+++ b/include/themes/paw/main.css
@@ -1296,6 +1296,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
