--- a/include/themes/raspberry/main.css
+++ b/include/themes/raspberry/main.css
@@ -1278,6 +1278,7 @@ legend {
 
 .settingsFilter {
 	display: table;
+	white-space: nowrap;
 }
 
 .settingsFilter div {
